<resources>
    <string name="app_name">RestaurantMenus</string>
    <string name="cocido">Cocido Madrileño</string>
    <string name="icons_allergens">icons_allergens</string>
    <string name="plate_image">plate_image</string>
    <string name="deaful_plate_image">deaful_plate_image</string>
    <string name="mocked">El perro de san roque no tiene rabo</string>
    <string name="mockup_price">Precio : 8,5 Euros</string>
    <string name="notas_title">Notas</string>
    <string name="add_btn">Añadir</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="calculate_count">Cuenta</string>
    <string name="selec_table">Seleccione una mesa</string>
    <string name="table">Mesa</string>
    <string name="selec_plate">Seleccione un plato</string>+
    <string name="total_count">Cuenta de la mesa</string>
    <string name="total_message">Total a pagar: %s euros</string>
    <string name="total_empty">No hay platos añadidos.</string>
    <string name="plate_detail">Detalle de Plato</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="deleted">Eliminado</string>
    <string name="added">Añadido</string>
    <string name="edited">Editado</string>
</resources>
