<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/default_margin"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/plate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_marginTop="4dp"
            android:text="@string/cocido"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/aller_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/plate_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plate_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/plate_name"

            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/deaful_plate_image"
            android:maxWidth="@dimen/image_max_width"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plate_name"
            app:srcCompat="@drawable/images" />


        <LinearLayout
            android:id="@+id/aller_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </LinearLayout>

        <TextView
            android:id="@+id/plate_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mocked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plate_image"
            app:layout_constraintTop_toTopOf="@+id/plate_image" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mockup_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/plate_image"
            app:layout_constraintTop_toBottomOf="@+id/plate_description" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
